--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ python:
   - "3.6"
 
 install:
-  - pip install numpy netCDF4 xarray numba pytest-cov coverage
+  - pip install numpy netCDF4 xarray numba pytest-cov
 
 script:
   - py.test --cov=./
+
+after_success:
+  - codecov
