--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install numpy netCDF4 xarray numba pytest-cov
 
 script:
-  - py.test --cov=.
+  - py.test --cov=./
 
 after_success:
   - codecov
