--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - "3.6"
 
 install:
-  - pip install numpy netCDF4 xarray numba pytest-cov toolz
+  - pip install numpy netCDF4 xarray numba pytest-cov toolz codecov
 
 script:
   - py.test --cov=./
