--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
-# Based on http://conda.pydata.org/docs/travis.html
 language: python
 python:
   - "3.6"
 
 install:
-  - pip install numpy netCDF4 xarray numba pytest-cov toolz codecov
+  - pip install numpy netCDF4 xarray numba pytest-cov codecov
 
 script:
   - py.test --cov=./
